--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -136,21 +136,29 @@
 
 :root {
   --base-radius: 4px;
+  --color-primary: #409eff;
+  --color-primary-light-8: #d9ecff;
+  --color-primary-light-9: #ecf5ff;
+}
+
+html.dark {
+  --color-primary-light-8: #1d3043;
+  --color-primary-light-9: #18222c;
 }
 
 .card {
   padding: 1em;
-  background-color: var(--vp-c-bg);
+  background-color: var(--vp-c-bg-soft);
   box-shadow: var(--vp-shadow-1);
   border-radius: var(--base-radius);
 }
 
 .tag {
-  border: 1px solid var(--vp-c-border);
+  border: 1px solid var(--color-primary-light-8);
+  background-color: var(--color-primary-light-9);
   padding: 0 0.6em;
-  color: var(--vp-c-text-1);
+  color: var(--color-primary);
   border-radius: var(--base-radius);
-  cursor: pointer;
 }
 
 .tag+.tag {
@@ -164,7 +172,6 @@
 .svg-icon {
   width: 1rem;
   height: 1rem;
-  cursor: pointer;
 }
 
 .svg-icon+.svg-icon {
